# stars

./: .clang-format  .gitignore  CMakeLists.txt  README.md  build.cmd  build.sh  dev.md  main.cpp  oldTestingBoard.md
docs/: dev.md
include/: boardAnalyse.h  boardInterface.h  boardRecord.h  boardRoute.h  boardState.h  boardTest.h  boardTools.h  shortList.h  tools.h
lib/: boardAnalyse.cpp  boardAnalyse.h  boardHandle.cpp  boardHandle.h  boardInterface.cpp  boardInterface.h  boardRecord.cpp  boardRecord.h  boardState.cpp  boardState.h  shortList.h
script/: build.cmd  build.sh  changeEncoding.cmd  changeEncoding.sh
src/: boardAnalyse.cpp  boardInterface.cpp  boardRecord.cpp  boardRoute.cpp  boardState.cpp  boardTest.cpp  boardTools.cpp  main.cpp  shortList.cpp  tools.cpp
